Update modelos proveedores, clientes normalizacion de los datos